--- a/src/main/resources/templates/user-create.html
+++ b/src/main/resources/templates/user-create.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link th:href="@{/style.css}" rel="stylesheet"/>
 <head>
     <meta charset="UTF-8">
     <title>Create User</title>
 </head>
 <body>
-<form action="#" th:action="@{/user-create}" th:object="${user}" method="post">
-    <label for="firstName">First Name</label>
-    <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">
-    <label for="lastName">Last Name</label>
-    <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">
-    <input type="submit" value="Create User">
-</form>
+    <div class="box createbox">
+        <form action="#" th:action="@{/user-create}" th:object="${user}" method="post">
+            <div class="edit">
+                <label for="firstName">First Name</label>
+                <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">
+            </div>
+            <div class="edit">
+                <label for="lastName">Last Name</label>
+                <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">
+            </div>
+            <input class="button" type="submit" value="Create User">
+        </form>
+    </div>
 </body>
 </html>
